--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-internet-exit.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-internet-exit.j2
@@ -7,20 +7,20 @@
 {% if router_internet_exit is arista.avd.defined %}
 !
 router internet-exit
-{%     for exit_group in router_internet_exit.exit_groups | arista.avd.default([]) | arista.avd.natural_sort('name') %}
+{%     for exit_group in router_internet_exit.exit_groups | arista.avd.natural_sort('name') %}
     !
     exit-group {{ exit_group.name }}
-{%         for local_connection in exit_group.local_connections | arista.avd.default([]) | arista.avd.natural_sort('name') %}
+{%         for local_connection in exit_group.local_connections | arista.avd.natural_sort('name') %}
         local connection {{ local_connection.name }}
 {%         endfor %}
 {%         if exit_group.fib_default is arista.avd.defined(true) %}
         fib-default
 {%         endif %}
 {%     endfor %}
-{%     for policy in router_internet_exit.policies | arista.avd.default([]) | arista.avd.natural_sort('name') %}
+{%     for policy in router_internet_exit.policies | arista.avd.natural_sort('name') %}
     !
     policy {{ policy.name }}
-{%         for exit_group in policy.exit_groups | arista.avd.default([]) | arista.avd.natural_sort('name') %}
+{%         for exit_group in policy.exit_groups | arista.avd.natural_sort('name') %}
 {%             if exit_group.name is arista.avd.defined %}
         exit-group {{ exit_group.name }}
 {%             endif %}
