--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-service-insertion.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-service-insertion.j2
@@ -7,4 +7,22 @@
 {% if router_service_insertion.enabled is arista.avd.defined(true) %}
 !
 router service-insertion
+{%     for connection in router_service_insertion.connections | arista.avd.natural_sort('name') %}
+   connection {{ connection.name }}
+{%         if connection.ethernet_interface is arista.avd.defined %}
+{%             if connection.ethernet_interface.name is arista.avd.defined and connection.ethernet_interface.next_hop is arista.avd.defined %}
+      interface {{ connection.ethernet_interface.name }} next-hop {{ connection.ethernet_interface.next_hop }}
+{%             endif %}
+{%         elif connection.tunnel_interface is arista.avd.defined %}
+{%             if connection.tunnel_interface.primary is arista.avd.defined %}
+      interface {{ connection.tunnel_interface.primary }} primary
+{%             endif %}
+{%             if connection.tunnel_interface.secondary is arista.avd.defined %}
+      interface {{ connection.tunnel_interface.secondary }} secondary
+{%             endif %}
+{%         endif %}
+{%         if connection.monitor_connectivity_host is arista.avd.defined %}
+      monitor connectivity host {{ connection.monitor_connectivity_host }}
+{%         endif %}
+{%     endfor %}
 {% endif %}
