--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos-device-documentation.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos-device-documentation.j2
@@ -95,6 +95,8 @@
 {% include 'documentation/application-traffic-recognition.j2' %}
 {# Router path-selection #}
 {% include 'documentation/router-path-selection.j2' %}
+{# Router internet-exit #}
+{% include 'documentation/router-internet-exit.j2' %}
 {# Router L2 VPN #}
 {% include 'documentation/router-l2-vpn.j2' %}
 {# IP DHCP Relay #}
