--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/policy-maps-qos.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/policy-maps-qos.j2
@@ -18,5 +18,20 @@ policy-map type quality-of-service {{ policy_map.name }}
       set {{ cli_set }} {{ class.set[set] }}
 {%             endif %}
 {%         endfor %}
+{%         if class.police is arista.avd.defined %}
+{%             set police_cli = "police rate " %}
+{%             if class.police.rate is arista.avd.defined and class.police.rate_burst_size is arista.avd.defined %}
+{%                 set police_cli = police_cli ~ class.police.rate ~ " " ~ class.police.rate_unit | arista.avd.default('bps') ~ " burst-size " ~ class.police.rate_burst_size ~ " " ~ class.police.rate_burst_size_unit | arista.avd.default('bytes') %}
+{%                 if class.police.higher_rate is arista.avd.defined and class.police.higher_rate_burst_size is arista.avd.defined %}
+{%                     if class.police.action.type is arista.avd.defined("dscp") and class.police.action.dscp_value is arista.avd.defined %}
+{%                         set police_cli = police_cli ~ " action set dscp " ~ class.police.action.dscp_value %}
+{%                     elif class.police.action.type is arista.avd.defined("drop-precedence") %}
+{%                         set police_cli = police_cli ~ " action set drop-precedence"  %}
+{%                     endif %}
+{%                     set police_cli = police_cli ~ " rate " ~ class.police.higher_rate ~ " " ~ class.police.higher_rate_unit | arista.avd.default('bps') ~ " burst-size " ~ class.police.higher_rate_burst_size ~ " " ~ class.police.higher_rate_burst_size_unit | arista.avd.default('bytes') %}
+{%                 endif %}
+{%             endif %}
+      {{ police_cli }}
+{%         endif %}
 {%     endfor %}
 {% endfor %}
