--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-segment-security.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-segment-security.j2
@@ -36,14 +36,12 @@ router segment-security
 {%             for segment in vrf.segments %}
       segment {{ segment.name }}
          definition
-{%                 if segment.definition.interfaces is arista.avd.defined %}
-{%                     for entry in segment.definition.interfaces | arista.avd.natural_sort %}
+{%                 for entry in segment.definition.interfaces | arista.avd.natural_sort %}
             match interface {{ entry }}
-{%                     endfor %}
-{%                 endif %}
+{%                 endfor %}
 {%                 if segment.definition.match_lists is arista.avd.defined %}
 {%                     for entry in segment.definition.match_lists | arista.avd.natural_sort('name') %}
-{%                         if entry.covered is arista.avd.defined %}
+{%                         if entry.covered is arista.avd.defined(true) %}
 {%                             set host_cli = "match covered prefix-list " %}
 {%                         else %}
 {%                             set host_cli = "match prefix-" %}
