--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/management-security.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/management-security.j2
@@ -8,16 +8,19 @@
 !
 management security
 {%     if management_security.entropy_source is arista.avd.defined %}
+   entropy source {{ management_security.entropy_source }}
+{%     endif %}
+{%     if management_security.entropy_sources is arista.avd.defined %}
 {%         set entropy_sources = [] %}
 {%         for source in ['hardware', 'haveged', 'cpu_jitter'] %}
-{%             if management_security.entropy_source[source] is arista.avd.defined(true) %}
+{%             if management_security.entropy_sources[source] is arista.avd.defined(true) %}
 {%                 set _ = entropy_sources.append(source.replace("_", " ")) %}
 {%             endif %}
 {%         endfor %}
 {%         if entropy_sources %}
    entropy source {{ entropy_sources | join(" ") }}
 {%         endif %}
-{%         if management_security.entropy_source.hardware_exclusive is arista.avd.defined(true) %}
+{%         if management_security.entropy_sources.hardware_exclusive is arista.avd.defined(true) %}
    entropy source hardware exclusive
 {%         endif %}
 {%     endif %}
